--- a/HomepageStyle.css
+++ b/HomepageStyle.css
@@ -30,6 +30,8 @@ div.links a img{
 
 div.col-md-8 {
   height:100vh;
+  border: solid;
+  border-color: white;
 }
 
 div.col-md-4{
@@ -45,8 +47,9 @@ div.container{
 }
 
 #Learn {
-  padding: 14vh 25px 14vh 80px;
-  margin-left: 0px;
+  padding: 13.5vh 25px 13.5vh 80px;
+  margin: 0px 0px auto 0px;
+  font-size: 30px;
 }
 
 #Learn:hover {
