--- a/HomepageStyle.css
+++ b/HomepageStyle.css
@@ -3,65 +3,64 @@ body {
 }
 
 div.intro h1 {
-  font-size: 72px;
+  font-size: 9vh;
   margin-bottom: 0px;
 }
 
 div.intro{
     font-family: "Libian SC";
     margin: 0 auto;
-    width: 400px;
-    margin-top: 30vh;
+    width: 50vh;
+    min-width: 400px;
+    margin-top: 20vh;
 }
 
 div.intro p {
-  font-size: 18px;
+  font-size: 2.5vh;
   margin-top: 0px;
   margin-bottom: 0px;
 }
 
 div.links a img{
   margin-top: 10px;
-  width: 20px;
-  height: 20px;
+  width: 3vh;
+  height: 3vh;
   margin-right: 10px;
   text-align: left;
 }
 
-div.col-md-8 {
-  height:100vh;
-  border: solid;
-  border-color: white;
+div.headlinks{
+  margin-right: 20px;
+  height: 10vh;
 }
 
-div.col-md-4{
-  font-family: "Libian SC";
-  font-size: 25px;
-  padding: 0px;
-  height:100vh;
-  margin-left: 0px;
+div.nav {
+  background-color: #1aaaee;
+  width: 101vw;
+  margin-left:-10px;
+  margin-top: -10px;
+  height: 50px;
 }
 
-div.container{
-  margin-left: 0px;
-}
-
-#Learn {
-  padding: 13.5vh 25px 13.5vh 80px;
-  margin: 0px 0px auto 0px;
-  font-size: 30px;
-}
-
-#Learn:hover {
-  background: black; /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(left, #148BBA , white); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(right, #148BBA, white); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(right, #148BBA, white); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(to right, #148BBA, white); /* Standard syntax */
-  opacity: 0.8;
+a.Learn {
+  display: inline;
+  float: right;
+  font-size: 28px;
+  padding-left: 10px;
+  padding-right: 10px;
   color: white;
+  text-decoration: none;
+  height: 50px;
 }
 
+a.Learn:hover {
+  text-decoration: underline;
+}
+
+
+a.Learn p {
+  margin-top: 3px;
+}
 #title {
   color: #1abbe8;
 }
